// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetSandboxURL Message Part Component renders with IP address URL 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono"
  >
    <div
      class="flex items-center gap-1 text-muted-foreground mb-1 font-semibold"
    >
      <div
        data-testid="link-icon"
      >
        LinkIcon
      </div>
      <span>
        Get Sandbox URL
      </span>
    </div>
    <div
      class="relative pl-6 min-h-5"
    >
      <span
        class="inline-flex items-center justify-center w-5 h-5 absolute left-0 top-0"
      >
        <div
          data-testid="check-icon"
        >
          CheckIcon
        </div>
      </span>
      <a
        href="http://192.168.1.100:8080"
        target="_blank"
      >
        http://192.168.1.100:8080
      </a>
    </div>
  </div>
</div>
`;

exports[`GetSandboxURL Message Part Component renders with done status and URL 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono"
  >
    <div
      class="flex items-center gap-1 text-muted-foreground mb-1 font-semibold"
    >
      <div
        data-testid="link-icon"
      >
        LinkIcon
      </div>
      <span>
        Get Sandbox URL
      </span>
    </div>
    <div
      class="relative pl-6 min-h-5"
    >
      <span
        class="inline-flex items-center justify-center w-5 h-5 absolute left-0 top-0"
      >
        <div
          data-testid="check-icon"
        >
          CheckIcon
        </div>
      </span>
      <a
        href="https://sandbox.example.com/abc123"
        target="_blank"
      >
        https://sandbox.example.com/abc123
      </a>
    </div>
  </div>
</div>
`;

exports[`GetSandboxURL Message Part Component renders with done status without URL 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono"
  >
    <div
      class="flex items-center gap-1 text-muted-foreground mb-1 font-semibold"
    >
      <div
        data-testid="link-icon"
      >
        LinkIcon
      </div>
      <span>
        Get Sandbox URL
      </span>
    </div>
    <div
      class="relative pl-6 min-h-5"
    >
      <span
        class="inline-flex items-center justify-center w-5 h-5 absolute left-0 top-0"
      >
        <div
          data-testid="check-icon"
        >
          CheckIcon
        </div>
      </span>
      <span>
        Getting Sandbox URL
      </span>
    </div>
  </div>
</div>
`;

exports[`GetSandboxURL Message Part Component renders with error status 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono"
  >
    <div
      class="flex items-center gap-1 text-muted-foreground mb-1 font-semibold"
    >
      <div
        data-testid="link-icon"
      >
        LinkIcon
      </div>
      <span>
        Get Sandbox URL
      </span>
    </div>
    <div
      class="relative pl-6 min-h-5"
    >
      <span
        class="inline-flex items-center justify-center w-5 h-5 absolute left-0 top-0"
      >
        <div
          data-testid="check-icon"
        >
          CheckIcon
        </div>
      </span>
      <span>
        Getting Sandbox URL
      </span>
    </div>
  </div>
</div>
`;

exports[`GetSandboxURL Message Part Component renders with loading status 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono"
  >
    <div
      class="flex items-center gap-1 text-muted-foreground mb-1 font-semibold"
    >
      <div
        data-testid="link-icon"
      >
        LinkIcon
      </div>
      <span>
        Get Sandbox URL
      </span>
    </div>
    <div
      class="relative pl-6 min-h-5"
    >
      <span
        class="inline-flex items-center justify-center w-5 h-5 absolute left-0 top-0"
      >
        <div
          data-testid="ai-loader"
        >
          Loader
        </div>
      </span>
      <span>
        Getting Sandbox URL
      </span>
    </div>
  </div>
</div>
`;

exports[`GetSandboxURL Message Part Component renders with localhost URL 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono"
  >
    <div
      class="flex items-center gap-1 text-muted-foreground mb-1 font-semibold"
    >
      <div
        data-testid="link-icon"
      >
        LinkIcon
      </div>
      <span>
        Get Sandbox URL
      </span>
    </div>
    <div
      class="relative pl-6 min-h-5"
    >
      <span
        class="inline-flex items-center justify-center w-5 h-5 absolute left-0 top-0"
      >
        <div
          data-testid="check-icon"
        >
          CheckIcon
        </div>
      </span>
      <a
        href="http://localhost:3000"
        target="_blank"
      >
        http://localhost:3000
      </a>
    </div>
  </div>
</div>
`;

exports[`GetSandboxURL Message Part Component renders with long URL 1`] = `
<div>
  <div
    class="text-sm px-3.5 py-3 border border-border bg-background rounded-md font-mono"
  >
    <div
      class="flex items-center gap-1 text-muted-foreground mb-1 font-semibold"
    >
      <div
        data-testid="link-icon"
      >
        LinkIcon
      </div>
      <span>
        Get Sandbox URL
      </span>
    </div>
    <div
      class="relative pl-6 min-h-5"
    >
      <span
        class="inline-flex items-center justify-center w-5 h-5 absolute left-0 top-0"
      >
        <div
          data-testid="check-icon"
        >
          CheckIcon
        </div>
      </span>
      <a
        href="https://sandbox.example.com/very/long/path/with/many/segments/and/parameters?key=value&other=param"
        target="_blank"
      >
        https://sandbox.example.com/very/long/path/with/many/segments/and/parameters?key=value&other=param
      </a>
    </div>
  </div>
</div>
`;
